fixed arraylist errors